Fix HTML structure and formatting issues

--- a/semana_5.html
+++ b/semana_5.html
@@ -149,16 +149,16 @@
         </div>
 
         <h1 class="main-title">5º Domingo da Quaresma</h1>
-        [cite_start]<h2 class="subtitle">A ressurreição de Lázaro (João 11,1-45) [cite: 43]</h2>
+        <h2 class="subtitle">A ressurreição de Lázaro (João 11,1-45)</h2>
 
         <div class="theme-box">
-            [cite_start]Tema: Libertar o que está preso [cite: 44]
+            Tema: Libertar o que está preso
         </div>
 
         <div class="separator"></div>
 
         <div class="spiritual-key">
-            [cite_start]“Jesus chama Lázaro para fora. Em família, somos chamados a libertar o que gera tristeza, distância ou silêncio.” [cite: 45]
+           “Jesus chama Lázaro para fora. Em família, somos chamados a libertar o que gera tristeza, distância ou silêncio.”
         </div>
 
         <div class="separator"></div>
@@ -168,9 +168,9 @@
                 <span class="icon-dot"></span> Gesto em Família
             </div>
             <ul>
-                [cite_start]<li>Pergunta-chave: <strong>“O que precisa morrer para que a nossa família viva melhor?”</strong> [cite: 47, 48]</li>
-                [cite_start]<li>Escolher uma <strong>mudança concreta</strong> (perdão, reconciliação ou nova rotina). [cite: 49]</li>
-                [cite_start]<li>Ficar atento às necessidades do outro diariamente para “dar vida”. [cite: 53]</li>
+                <li>Pergunta-chave: <strong>“O que precisa morrer para que a nossa família viva melhor?”</strong> </li>
+                <li>Escolher uma <strong>mudança concreta</strong> (perdão, reconciliação ou nova rotina). </li>
+                <li>Ficar atento às necessidades do outro diariamente para “dar vida”.</li>
             </ul>
         </div>
 
@@ -179,11 +179,12 @@
                 <span class="icon-dot" style="background-color: #5E4B7F;"></span> Sinal Concreto em Casa
             </div>
             <p style="line-height: 1.5; font-size: 0.95rem;">
-                [cite_start]Colocar uma <strong>pedra ou papel</strong> numa caixa com o que nos "prende"[cite: 50, 51]. [cite_start]No final da semana, retirar e rezar: <em>“Senhor, liberta a nossa família do que pesa e ensina-nos a viver com mais amor.”</em> [cite: 52]
+               Colocar uma <strong>pedra ou papel</strong> numa caixa com o que nos "prende". No final da semana, retirar e rezar: <em>“Senhor, liberta a nossa família do que pesa e ensina-nos a viver com mais amor.”</em>
             </p>
         </div>
 
     </div>
 
 </body>
+
 </html>
